[package]
name = "orderbook"
version = "0.1.0"
authors = ["Anand Aravindan <anand.anand84@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.11"
bincode = "1.1.2"
prost = "0.5.0"
num-traits = "0.2.8"
bigdecimal = "0.1.0"
stock_messages = { git = "https://github.com/anandanand84/stock_messages" }
lazy_static = "1.4.0"
serde = { version = "1.0.102", features = ["derive"] }
itertools = "0.8.1"
console_error_panic_hook = { version = "0.1.6", optional = true }
cached= "0.43.0"
wasm-bindgen = { version = "0.2.63" }
web-sys = { version = "0.3.4" , features=["console", "Document", "Element", "Event", "HtmlElement", "Node", "Window"]}
colored = { version = "2" }

[features]
default = ["console_error_panic_hook"]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"